--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,21 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string-array name="cities">
+        <item>Москва</item>
+        <item>Санкт-Петербург</item>
+        <item>Казань</item>
+        <item>Екатеринбург</item>
+    </string-array>
+    <string-array name="category">
+        <item>Все</item>
+        <item>Военно-патриотические</item>
+        <item>Культурные</item>
+        <item>Развлекательные</item>
+        <item>Религиозные</item>
+        <item>Исторические</item>
+        <item>Архитектурные</item>
+        <item>Природные</item>
+        <item>Для детей</item>
+    </string-array>
 </resources>
